--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,23 +7,33 @@
 <!-- <input type="number" name="pincode" id="pincode" placeholder="Pincode" [(ngModel)]="user.pincode"> -->
 <!-- <button type="submit" class="btn btn-primary" >Notify</button>
 </form> -->
+<div class="container p-3 my-3 border" style="padding-top: 150px;width: 650px; height: 500px;">
+    <h1 style="text-align: center;padding-top: 100px;">Vaccine Availability Notification</h1>
+    <div class="container-fluid" style="width: 400px;height: 300px; padding-top: 20px;">
 
-<div class="container-fluid"  >
-    <h1>Vaccine Availability Notification</h1>
-    <form #userForm="ngForm"  >
-        {{userForm.value | json}}
-        {{userModel | json}}
-        <div class="form-group">
-            <input type="email"  placeholder="email" class="form-control" name="email" [(ngModel)]="userModel.email">
+        <form #userForm="ngForm">
+            <!-- {{userForm.value | json}}
+        {{userModel | json}} -->
+            <div class="form-outline mb-4">
+                <input type="email" placeholder="email" class="form-control" name="email" [(ngModel)]="userModel.email">
 
-        </div>
+            </div>
 
-        <div class="form-group">
-            <input type="text" placeholder="pincode" class="form-control" name="pincode" [(ngModel)]="userModel.pincode">
+            <div class="form-outline mb-4">
+                <input type="text" placeholder="pincode" class="form-control" name="pincode"
+                    [(ngModel)]="userModel.pincode">
 
-        </div>
-        <button class="btn btn-primary" type="button" (click)="registerUser()">Register</button>
+            </div>
+            <button class="btn btn-primary btn-block" type="button" (click)="registerUser()">Register</button>
 
-    </form>
+        </form>
 
+    </div>
+
+    
+</div>
+<div class="navbar navbar-inverse navbar-fixed-bottom">
+          <div class="container">
+                <p class="navbar-text">© 2021. Vaisakh. Warning : Under testing. </p>
+            </div>
 </div>
