--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,48 @@
-<div class="container p-3 my-3 border" style="padding-top: 150px;width: 650px; height: 500px;">
-    <h1 style="text-align: center;padding-top: 100px;">Vaccine Availability Notification</h1>
-    <!-- <div *ngIf="alert" class="alert alert-success" role="alert">
+<div fxLayout="column" ftLayout.lt-sm="column" fxLayoutAlign="center center" style="padding-top: 150px;">
+    <h1 style="text-align: center;">Vaccine Availability Notification</h1>
+</div>
+<!-- <div *ngIf="alert" class="alert alert-success" role="alert">
         <h4 class="alert-heading">Success!</h4>
         <p>Registered successfully.</p>
         <hr>
         <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
     </div> -->
-
-    <div *ngIf="alert" class="alert alert-warning alert-dismissible fade show" role="alert" style="text-align: center;">
-        <strong>Success!!</strong> Registered successfully.
-        <button (click)="closeAlert()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+<div class="container p-3 my-3 border" fxLayout="column" style="align-items: center;">
+    <div fxLayout="column" *ngIf="alert" class="alert alert-warning alert-dismissible fade show" role="alert"
+        style="text-align: center;width: 300px;align-items: center;">
+        <strong style="width: 300px;">Success!!</strong> Registered successfully.
+        <button  (click)="closeAlert()" type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="container-fluid" style="width: 400px;height: 300px; padding-top: 20px;">
+    <div fxLayout="column" class="container-fluid" style="width: 300px;">
 
-        <form #userForm="ngForm" (ngSubmit)="onSubmit();userForm.reset()" novalidate>
+        <form #userForm="ngForm"  (ngSubmit)="onSubmit();userForm.reset()" novalidate>
             <!-- {{userForm.value | json}}
         {{userModel | json}} -->
-            <div class="form-outline mb-4">
-                <input type="email" placeholder="email" class="form-control" name="email" [(ngModel)]="userModel.email">
+            <div fxLayoutAlign="center center" class="form-outline mb-4">
+                <input style="width: 280px;" type="email" placeholder="email" class="form-control" name="email"
+                    [(ngModel)]="userModel.email">
 
             </div>
 
-            <div class="form-outline mb-4">
-                <input type="text" placeholder="pincode" class="form-control" name="pincode"
+            <div fxLayoutAlign="center center" class="form-outline mb-4">
+                <input style="width: 280px;" type="text" placeholder="pincode" class="form-control" name="pincode"
                     [(ngModel)]="userModel.pincode">
 
             </div>
-            <button class="btn btn-primary btn-block" type="submit" (click)="registerUser()">Register</button>
-
+            <div fxLayoutAlign="center center" class="form-outline mb-4">
+                <button style="width: 100px;" class="btn btn-primary btn-block" type="submit"
+                    (click)="registerUser()">Register</button>
+            </div>
         </form>
 
     </div>
-
-
 </div>
-<div class="navbar navbar-inverse navbar-fixed-bottom">
+
+
+<div style="text-align: center;align-items: center;" class="navbar navbar-inverse navbar-fixed-bottom" ftLayout.lt-sm="column">
           <div class="container">
-                <p class="navbar-text">© 2021. Vaisakh. Warning : Under testing. </p>
+                <p style="width: 300px;text-align: center;" class="navbar-text">© 2021 by P. Vaisakh<br> Warning: Under testing. </p>
             </div>
 </div>
