added details in success message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 <div class="container p-3 my-3 border" fxLayout="column" style="align-items: center;">
     <div fxLayout="column" *ngIf="alert" class="alert alert-warning alert-dismissible fade show" role="alert"
         style="text-align: center;width: 300px;align-items: center;">
-        <strong style="width: 300px;">Success!!</strong> Registered successfully.
+        <strong style="width: 300px;">Success!!</strong> Registered successfully. Notification will send to registered email.
         <button (click)="closeAlert()" type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
