Select option validations and placeholder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,11 +43,12 @@
 
             </div>
 
-            <div *ngIf="ageGroup.invalid && ageGroup.touched">
+            <div *ngIf=" ageGroupHasError && ageGroup.invalid && ageGroup.touched">
                 <small style="color: brown;" class="error">Age Group required *</small>
             </div>
             <div  class="form-group">
-                <select required class="custom-select" name="ageGroup" #ageGroup="ngModel" [(ngModel)]="userModel.ageGroup" >
+                <select required (blue)="validateAgeGroup(ageGroup.value)" (change)="validateAgeGroup(ageGroup.value)"  class="custom-select" name="ageGroup" #ageGroup="ngModel" [(ngModel)]="userModel.ageGroup" >
+                    <option value="0" disabled >Select Age Group</option>
                     <option value="18">18+</option>
                     <option value="40">40-44</option>
                     <option value="45">45+</option>
@@ -55,7 +56,7 @@
             </div>
 
             <div fxLayoutAlign="center center">
-                <button [disabled]="userForm.form.invalid" style="width: 100px;" class="btn btn-primary btn-block" type="submit"
+                <button [disabled]="userForm.form.invalid || ageGroupHasError " style="width: 100px;" class="btn btn-primary btn-block" type="submit"
                     (click)="registerUser()">Register</button>
             </div>
         </form>
